# CRISPy

./: README.md  justFile  pyproject.toml  run_demo.py
src/CRISPy/: controller.py  discovery.py  plugin.py  ui.py
