[project]
name = "CRISPy"
version = "0.1.0"
description = "A multi-ASI CRISP autofocus plugin for pymmcore-gui"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymmcore-plus",
    "magicgui",
    "qtpy",
    "PyQt6",
]

[project.entry-points."pymmcore_gui.main_window_menu"]
"CRISPy" = "CRISPy.plugin:launch_crisp_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/CRISPy"]

[dependency-groups]
dev = [
    "mdformat>=0.7.22",
    "mdformat-gfm>=1.0.0",
    "mdformat-tables>=1.0.0",
]
